fix overflow-x

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -72,7 +72,6 @@
   color: white;
   height: 96.5vh;
   overflow-y: scroll;
-  overflow-x: hidden;
   position: relative;
   display: grid;
   grid-template-rows: 200px 60px auto 0px;
