--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -196,6 +196,3 @@ img {
   -webkit-app-region: drag;
 }
 
-div {
-  overflow-x: hidden;
-}
